--- a/styles.css
+++ b/styles.css
@@ -293,7 +293,13 @@ body {
   }
   .nav-container ul {
     display: none;
+    flex-direction: column;
+    width: 100px;
+    justify-content: center;
+    align-items: center;
+    padding-top: 5em;
   }
+
   .catch-phrase {
     border: 2px solid white;
     width: 100%;
